# PDT-Hack

./: .breakpoints  LICENSE  README.md  app.py  home.html  pyproject.toml
graphs/: LSTM Model.py  graph.py
templates/: home.html  stockprediction.html  welldone.html
